--- a/style.css
+++ b/style.css
@@ -3,14 +3,21 @@
   padding: 0;
   box-sizing: border-box;
   font-size: 100%;
+  font-family: Inknut Antiqua, serif;
 }
 
 .header {
   display: flex;
   background-color: rgb(50, 167, 145);
   height: 80px;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+  padding: 0 15px;
+  color: rgb(236, 235, 235);
+}
+
+#trybewarts-header-title {
+  font-size: 2rem;
 }
 
 .trybewarts-login {
@@ -21,8 +28,22 @@
   height: 70px;
 }
 
+.title {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 1.5rem;
+  font-weight: 800;
+}
+
 .form-container {
   display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 20px;
+}
+
+body {
+  background-color: rgba(239, 239, 239, 255);
 }
 
 #evaluation-form {
@@ -37,10 +58,44 @@
 
 .nome-sobrenome {
   display: flex;
+  margin-bottom: 10px;
+}
+
+#input-name {
+  border-radius: 10px;
+  margin-right: 5px;
+  width: 100%;
+  border: none;
+  padding-left: 10px;
+}
+
+#input-lastname {
+  border-radius: 10px;
+  margin-right: 5px;
+  width: 100%;
+  border: none;
+  padding-left: 10px;
+}
+
+#input-email {
+  border-radius: 10px;
+  margin-right: 5px;
+  width: 100%;
+  border: none;
+  padding-left: 10px;
+}
+
+#house {
+  border-radius: 10px;
+  margin-right: 5px;
+  width: 100%;
+  border: none;
+  padding-left: 10px;
 }
 
 .email-casa {
   display: flex;
+  margin-bottom: 20px;
 }
 
 .family {
@@ -51,18 +106,70 @@
 .content {
   display: flex;
   flex-direction: column;
+
 }
 
-.container .content1 .content2 {
+.content1 {
   display: flex;
+  justify-content: space-around;
 }
 
-footer {  
+.content2 {
+  display: flex;
+  justify-content: space-around;
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+}
+
+footer {
   text-align: center;
-  background-color: rgba(60,64,74,255);
-  color: rgb(236,235,235);
+  background-color: rgba(60, 64, 74, 255);
+  color: rgb(236, 235, 235);
 }
 
 button {
-  background-color: rgba(78,44,131,255)
+  background-color: rgba(78, 44, 131, 255);
+}
+
+.login {
+  color: rgb(236, 235, 235);
+  border-radius: 10px;
+  padding: 0 40px;
+  border: none;
+}
+
+.email {
+  border-radius: 10px;
+  margin-right: 10px;
+  border: none;
+  padding-left: 10px;
+}
+
+.senha {
+  border-radius: 10px;
+  margin-right: 10px;
+  border: none;
+  padding-left: 10px;
+}
+
+#textarea {
+  height: 200px;
+  width: 100%;
+}
+
+.rate {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#submit-btn {
+  color: rgb(236, 235, 235);
+  border-radius: 10px;
+  padding: 0 40px;
+  border: none;
+  width: 100%;
 }
